--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
       </div>
 
       <div class="col-lg-8 col-md-6 contact-form">
-        <form action="mailto:rahulharlalka96@gmail.com">
+        <form action="mailto:hardikgupta0506@gmail.com">
           <div class="form-row">
             <div class="col">
               <input type="text" class="form-control" placeholder="Your Name">
