--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 
   <!-- navigation menu starts -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark" id="navi">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">Portfolio</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -29,7 +29,7 @@
             <a class="nav-link active" aria-current="page" href="#aboutPage">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#skillset">Skills</a>
+            <a class="nav-link " href="#skillset">Skills</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#projects">Projects</a>
@@ -49,7 +49,7 @@
   <!-- About Section starts -->
   <div id="about">
     <div class="jumbotron" id="aboutPage">
-      <h1 class="display-4" style="font-weight: bold;">Hardik Gupta</h1>
+      <h1 class="display-4" style="font-weight: bold;padding-top: 50px;">Hardik Gupta</h1>
       <h2 class="lead">Comptetive Programmer & Web Dev Enthusiast</h2><br>
     </div>
 
@@ -80,7 +80,7 @@
         <div class="container">
 
           <div class="section-title">
-            <h1>Skills</h1>
+            <h1 style="padding-top: 50px;">Skills</h1>
           </div>
           <div class="row1">
             <div class="col-md-3">
@@ -136,9 +136,9 @@
 
   <hr>
   <!-- Projects section starts -->
-  <section id="projects">
+  <section id="projects" >
   <div class="card-deck">
-    <h1>Projects</h1>
+    <h1 style="padding-top: 50px;">Projects</h1>
     <div class="card">
       <img class="card-img-top" src="./assets/ss.JPG"  alt="Card image cap">
      
@@ -159,7 +159,7 @@
 
   <!-- contact section -->
   <section id="contactMe">
-    <h1>Contact Me</h1>
+    <h1 style="padding-top: 50px;">Contact Me</h1>
     <div id="contact">
       <div class="row">
         <div class="col-lg-4 col-md-6 contact-content">
@@ -222,9 +222,9 @@
         src="https://www.logo.wine/a/logo/Tinder_(app)/Tinder_(app)-Logo.wine.svg" id="contact-logo1"></a>
   </div>
   <!-- social media ends -->
-
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 <script src="https://kit.fontawesome.com/23c082efd8.js" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+
 </body>
 
 
