--- a/index.html
+++ b/index.html
@@ -136,23 +136,24 @@
 
   <hr>
   <!-- Projects section starts -->
-  <section id="projects" >
-  <div class="card-deck">
-    <h1 style="padding-top: 50px;">Projects</h1>
-    <div class="card">
-      <img class="card-img-top" src="./assets/ss.JPG"  alt="Card image cap">
-     
+  <section id="projects">
+    <div class="card-deck">
+      <h1 style="padding-top: 50px;">Projects</h1>
+      <div class="card">
+        <img class="card-img-top" src="./assets/ss.JPG" alt="Card image cap">
+
+      </div>
+      <div class="card">
+        <img class="card-img-top" src="./assets/ioT.JPG" id="iot" alt="Card image cap">
+
+      </div>
+      <div class="card">
+        <img class="card-img-top" src="./assets/WhatsApp Image 2021-04-26 at 16.08.14.jpeg" id="discord"
+          alt="Card image cap">
+
+      </div>
     </div>
-    <div class="card">
-      <img class="card-img-top" src="./assets/ioT.JPG" id="iot" alt="Card image cap">
-  
-    </div>
-    <div class="card">
-      <img class="card-img-top" src="./assets/WhatsApp Image 2021-04-26 at 16.08.14.jpeg" id="discord" alt="Card image cap">
- 
-    </div>
-  </div>
-</section>
+  </section>
   <!-- Projects section ends -->
 
   <hr>
@@ -222,8 +223,10 @@
         src="https://www.logo.wine/a/logo/Tinder_(app)/Tinder_(app)-Logo.wine.svg" id="contact-logo1"></a>
   </div>
   <!-- social media ends -->
-<script src="https://kit.fontawesome.com/23c082efd8.js" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/23c082efd8.js" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous">
+  </script>
 
 </body>
 
