--- a/index.html
+++ b/index.html
@@ -78,7 +78,6 @@
     <div>
       <section id="skillset" class="services">
         <div class="container">
-
           <div class="section-title">
             <h1 style="padding-top: 50px;">Skills</h1>
           </div>
@@ -158,7 +157,7 @@
 
   <hr>
 
-  <!-- contact section -->
+  <!-- contact section starts -->
   <section id="contactMe">
     <h1 style="padding-top: 50px;">Contact Me</h1>
     <div id="contact">
@@ -206,6 +205,8 @@
   </section>
   <!-- contact section ends -->
 
+
+
   <!-- social media section -->
 
   <div class="social-links">
@@ -223,6 +224,8 @@
         src="https://www.logo.wine/a/logo/Tinder_(app)/Tinder_(app)-Logo.wine.svg" id="contact-logo1"></a>
   </div>
   <!-- social media ends -->
+
+
   <script src="https://kit.fontawesome.com/23c082efd8.js" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous">
